cluster/mediaserver/gluetun-media/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: gluetun-media
    app.kubernetes.io/version: v3.41
  name: gluetun-media
spec:
  selector:
    app.kubernetes.io/name: gluetun-media
  ports:
  - name: http-gluetun-media
    port: 8888
    targetPort: 8888
  - name: control-gluetun-media
    port: 8000
    targetPort: 8000
