cluster/mediaserver/gluetun-media/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gluetun-media-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gluetun-media
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: jellyfin
      podSelector:
        matchLabels:
          app.kubernetes.io/name: music-library-builder
    ports:
    - port: 8888
      protocol: TCP
    - port: 8000
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-metrics
    ports:
    - port: 9101
      protocol: TCP
